--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,12 +13,21 @@
 		<link rel="stylesheet" href="css/style.css">
 
 		<!-- Font Awesome -->
-		<link rel="stylesheet" href="assets/fontawesome/css/all.css">
+		<link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
+
+		<!-- Materialize -->
+		<link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"  media="screen,projection"/>
 	</head>
 	<body>
 		{{> _header}}
         <div class="container">
             {{{body}}}
         </div>
+
+		<!--Materialize Script-->
+     	<script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+
+		<!-- Init Materialize Animations -->
+		<script src="/js/materialize_init.js"></script>
     </body>
 </html>
