Added google oauth2

--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -10,7 +10,7 @@
     <!-- Materialize -->
     <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="/css/style.css">
-    <title>Storybooks Login</title>
+    <title>Meal Planner Login</title>
 </head>
 
 <body>
