--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,7 +7,7 @@
 <div class="divider"></div>
 
 <div class="section">
-    <a href="/auth/google" class="btn red darken-1">
+    <a href="/login/google" class="btn red darken-1">
         <i class="fab fa-google left"></i> Log In With Google
     </a>
 </div>
