--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -7,7 +7,7 @@
         <ul class="sidenav" id="mobile-demo">
             <li><a href="/meals">Meals</a></li>
             <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/auth/logout">Logout</a></li>
+            {{{loginStatus}}}
         </ul>
     </div>
 </nav>
