Added middleware to check authentication

--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -6,7 +6,7 @@
         </a>
         <ul class="sidenav" id="mobile-demo">
             <li><a href="/meals">Meals</a></li>
-            <li><a href="/dashboard">Dashboard</a></li>
+            <li><a href="/">Dashboard</a></li>
             {{{loginStatus}}}
         </ul>
     </div>
