--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,3 +1,6 @@
+<h3> Welcome {{name}}</h3>
+<p>Here is your meal plan</p>
+
 <div class="wrapper">
     <div class="col">
         <!--Update table such that people can customize their meals-->
