Added add meal page

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,14 +9,14 @@
 		<title>Meal Planner</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="/css/normalize.css">
+		<link rel="stylesheet" href="/css/style.css">
 
 		<!-- Font Awesome -->
-		<link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
+		<link rel="stylesheet" href="/assets/fontawesome/css/all.min.css">
 
 		<!-- Materialize -->
-		<link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"  media="screen,projection"/>
+		<link type="text/css" rel="stylesheet" href="/assets/materialize/css/materialize.min.css"  media="screen,projection"/>
 	</head>
 	<body>
 		{{> _header}}
@@ -26,7 +26,7 @@
         </div>
 
 		<!--Materialize Script-->
-     	<script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
+     	<script type="text/javascript" src="/assets/materialize/js/materialize.min.js"></script>
 
 		<!-- Init Materialize Animations -->
 		<script src="/js/materialize_init.js"></script>
