Added body parser for form processing

--- a/views/meals/add.hbs
+++ b/views/meals/add.hbs
@@ -17,11 +17,37 @@
                 <label for="status">Status</label>
             </div>
         </div>
-
+        <!--
         <div class="row">
             <div class="input-field">
                 <h5>Add your meal:</h5>
                 <textarea id="body" name="body"></textarea>
+            </div>
+        </div> -->
+
+        <div class="row">
+            <div class="input-field col s2">
+                <i class="fa-solid fa-basket-shopping prefix"></i>
+                <input type="text" id="ingredient1" name="Ingredient1">
+                <label for="ingredient1">Ingredient</label>
+            </div>
+            <div class="input-field col s2">
+                <i class="fa-solid fa-hashtag prefix"></i>
+                <input type="text" id="ing1qty" name="Qty1">
+                <label for="ing1qty">Qty</label>
+            </div>
+            <div class="input-field col s2">
+                <i class="fa-solid fa-weight-scale prefix"></i>
+                <input type="text" id="ing1unit" name="Unit1">
+                <label for="ing1unit">Unit</label>
+            </div>
+
+            <div class="col s1">
+                <i class="fas fa-add btn"></i>
+            </div>
+
+            <div class="col s1">
+                <i class="fas fa-trash btn"></i>
             </div>
         </div>
 
