Added methods for saving array of ingredients

--- a/views/meals/add.hbs
+++ b/views/meals/add.hbs
@@ -3,8 +3,8 @@
     <form action="/meals" method="POST" class="col s12">
         <div class="row">
             <div class="input-field">
-                <input type="text" id="title" name="title">
-                <label for="title">Meal name</label>
+                <input type="text" id="mealName" name="mealName">
+                <label for="mealName">Meal name</label>
             </div>
         </div>
 
